# orbit.rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yaml  deny.toml  invalid.json  valid.json
.config/: orbit.dic  spellcheck.toml
.github/workflows/: claude.yml  general.yml  jetstream-extra.yml  nats-counters.yml  nats-extra.yml  test.yml
core-extras/: Cargo.toml
counters/: Cargo.toml  README.md
counters/examples/: basic_counter.rs
counters/src/: counter.rs  errors.rs  lib.rs
jetstream-extra/: Cargo.toml  README.md
jetstream-extra/examples/: publisher.rs
jetstream-extra/src/: batch_fetch.rs  batch_publish.rs  lib.rs  publisher.rs
jetstream-extra/tests/: batch_fetch.rs  batch_publish.rs  batch_publish_all.rs  batch_publish_errors.rs  publisher_tests.rs
jetstream-extra/tests/configs/: jetstream.conf
nats-context/: Cargo.toml
nats-context/src/: lib.rs
nats-context/tests/: context.rs
nats-context/tests/contexts/: demo.json
nats-counters/: Cargo.toml  TEST_RESULTS.md  counters.done.md
nats-counters/examples/: batch_operations.rs  distributed_counter.rs
nats-counters/src/: counter_ext.rs  parser.rs
nats-counters/tests/: counter_basic_tests.rs  counter_edge_cases_tests.rs  counter_source_tracking.rs
nats-counters/tests/common/: mod.rs
nats-counters/tests/configs/: jetstream.conf
nats-extra/: Cargo.toml  README.md
nats-extra/src/: lib.rs  request_many.rs
nats-extra/tests/: request_many_tests.rs
schema-validator/: Cargo.toml
schema-validator/src/: client_ext.rs  errors.rs  lib.rs  registry.rs
schema-validator/tests/: mock_helpers.rs  registry_integration_tests.rs  registry_tests.rs  schema_validation_tests.rs
schema-validator/tests/configs/: config_with_mapping.conf
