[package]
name = "jetstream-extra"
authors = ["Tomasz Pietrek <tomasz@nats.io>"]
version = "0.1.0"
edition = "2021"
description = "Set of utilities and extensions for the NATS JetStream of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/jetstream-extra"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = "0.38.0"
bytes = "1.8.0"
futures = "0.3.31"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

[features]
request_many = []
default = ["request_many"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

