[package]
name = "jetstream-extra"
version = "0.1.0"
edition = "2024"
description = "Set of utilities and extensions for the JetStream NATS of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/jetstream-extra"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "messaging", "api", "jetstream"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = "0.44.1"
bytes = "1"
futures-util = "0.3"
nuid = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

