[package]
name = "jetstream-extra"
version = "0.2.1"
edition = "2024"
authors = ["Tomasz Pietrek <tomasz@synadia.com>"]
description = "Set of utilities and extensions for the JetStream NATS of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/jetstream-extra"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "api", "jetstream"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = "0.45.0"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
nuid = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

