[package]
name = "nats-context"
version = "0.1.0"
edition = "2024"
authors = ["Marcel Hauf <github@marcelhauf.name>"]
description = "NATS context API"
license = "Apache-2.0"
documentation = "https://docs.rs/nats-context"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extensions", "api", "context"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = "0.45.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }
