[package]
name = "nats-counters"
version = "0.1.0"
edition = "2024"
authors = ["Tomasz Pietrek <tomasz@synadia.com>"]
description = "NATS JetStream counters API"
license = "Apache-2.0"
documentation = "https://docs.rs/nats-counters"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats","extensions", "api", "jetstream", "counters"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = { git = "https://github.com/nats-io/nats.rs", branch = "main" }
futures-util = "0.3"
jetstream-extra = { path = "../jetstream-extra" }
num-bigint = "0.4.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util", "time"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

