[package]
name = "nats-extra"
authors = ["Tomasz Pietrek <tomasz@nats.io>"]
version = "0.1.0"
edition = "2021"
description = "Set of utilities and extensions for the Core NATS of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/nats-extra"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = { git = "https://github.com/nats-io/nats.rs", package = "async-nats", branch = "main" }
bytes = "1.8.0"
futures = "0.3.31"
tokio = { version = "1.0", features = ["time"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
request_many = []
default = ["request_many"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

