[package]
name = "nats-extra"
authors = ["Tomasz Pietrek <tomasz@synadia.com>"]
version = "0.3.0"
edition = "2024"
description = "Set of utilities and extensions for the Core NATS of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/nats-extra"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = { git = "https://github.com/nats-io/nats.rs", branch = "main" }
bytes = "1.8.0"
futures = "0.3.31"
nuid = "0.5.0"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

[features]
request_many = []
default = ["request_many"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

