[package]
name = "schema-validator"
authors = ["Tomasz Pietrek <tomasz@nats.io>"]
version = "0.1.0"
edition = "2021"
description = "Set of utilities and extensions for the Core NATS of the async-nats crate"
license = "Apache-2.0"
documentation = "https://docs.rs/schema-validator"
homepage = "https://github.com/synadia-io/orbit.rs"
repository = "https://github.com/synadia-io/orbit.rs"
keywords = ["nats", "extra", "extensions", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-nats = "0.38.0"
bytes = "1.8.0"
futures = "0.3.31"
tokio = { version = "1.0", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
nats_server = { git = "https://github.com/nats-io/nats.rs", package = "nats-server" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

